# mutex_benchmark

./: .gitignore  BITONIC_NETWORKS_COMPLEXITY.md  CXL_GPU_TEST_GUIDE.md  CXL_TYPE2_DEVICE_GUIDE.md  ELEVATOR_SET_COMPARISON.md  LINEARIZABLE_COUNTING_ANALYSIS.md  PCIe_ATOMIC_IMPLEMENTATION_SUMMARY.md  README.md  memeater.c  plot_results.py  run_experiments.sh  start.sh
apps/: meson.build
apps/cxl_gpu_test/: cxl_gpu_kernels.cu  cxl_gpu_lock.hpp  cxl_gpu_test.cpp  meson.build
apps/max_contention_bench/: max_contention_bench.cpp  meson.build
apps/min_contention_bench/: meson.build  min_contention_bench.cpp
apps/pcie_atomic_order_test/: meson.build  pcie_atomic_order_test.cpp
lib/lock/: HCLH_lock.cpp  bakery_mutex.cpp  bakery_nonatomic_mutex.cpp  bitonic_networks.hpp  boulangerie.cpp  burns_lamport_lock.hpp  cxl_ticket_lock.hpp  dijkstra_lock.cpp  hopscotch_local_lock.cpp  knuth_lock.cpp  lamport_lock.hpp  linear_elevator.cpp  linear_elevator_nca.cpp  linear_lamport_elevator.cpp  linearizable_counting_lock.hpp  lock.hpp  net_elevator_lock.hpp  peterson_lock.cpp  tree_elevator.cpp  tree_elevator_nca.cpp
lib/utils/: bench_utils.cpp  bench_utils.hpp  cxl_type2_sysfs.hpp  cxl_utils.cpp  cxl_utils.hpp  emucxl_kernel.h  emucxl_lib.c  emucxl_lib.h  meson.build
paper/: MutexBenchmarks.bib  usenix.aux  usenix.bbl  usenix.blg  usenix.out  usenix.tex
paper/sections/: abstract.tex  background.tex  conclusion.tex  evaluation.tex  fpga.tex  future_work.tex  intro.tex  methodology.tex  related_work.tex
scripts/: args.py  builder.py  constants.py  dataloader.py  main.py  plotter.py  runner.py
